--- a/k8s/action.yml
+++ b/k8s/action.yml
@@ -12,6 +12,10 @@ inputs:
     description: 'List of checks to run'
     required: false
     default: "default"
+  standalone-mode:
+    description: 'Use Chkk Standalone Mode'
+    required: false
+    default: "false"
   args:
     description: 'Additional arguments to pass to Chkk'
     required: false
@@ -19,9 +23,11 @@ inputs:
 runs:
   using: "composite"
   steps:
-    - run: curl -Lo chkk https://downloads.chkk.dev/v0.0.1/chkk-linux-amd64
-      shell: bash
+    - run: VERSION=$(curl -sS https://get.chkk.dev/cli/latest.txt) && curl -Lo chkk https://get.chkk.dev/${VERSION}/chkk-linux-amd64
+      shell: sh
     - run: chmod +x chkk
-      shell: bash
-    - run: ${{ github.workspace }}/chkk -f ${{ inputs.kubernetes-manifest }} -s ${{ inputs.skip-checks }} -r ${{ inputs.run-checks }} ${{ inputs.args }}
-      shell: bash
+      shell: sh
+    - run: if [ ${{ inputs.standalone-mode }} = true ]; then ./chkk standalone install; fi
+      shell: sh
+    - run: ./chkk -f ${{ inputs.kubernetes-manifest }} -s ${{ inputs.skip-checks }} -r ${{ inputs.enable-checks }} ${{ inputs.args }}
+      shell: sh
